# amrikyy

./: .cursor-config.yml  .cursorignore  .editorconfig  .env.bak  .env.example  .eslintrc.js  .eslintrc.json  .firebaserc  .gitignore  .gitpod.yml  .openshift.env  404.html  ADVANCED_AI_INTEGRATION_SUMMARY.md  ADVANCED_AI_SYSTEM_REPORT.md  ADVANCED_ANALYTICS_README.md  ADVANCED_ANALYTICS_SUMMARY.md  AI_COMMANDS.md  AI_ENHANCEMENT_SUMMARY.md  AI_ROLES_README.md  AI_SYSTEM_README.md  AI_TOOLS_ENHANCEMENT_GUIDE.md  ALWAYS_ACTIVE_AUTOPILOT_SUMMARY.md  AMRIKYY_DEPLOYMENT_GUIDE.md  AMRIKYY_SYSTEM_SUMMARY.md  APP_COMPLETE.md  AURAOS_SETUP_GUIDE.md  AUTOMATION_ARCHITECTURE_DESIGN.md  AUTOMATION_ENV_EXAMPLE.txt  AUTOMATION_IMPLEMENTATION_GUIDE.md  AUTOMATION_QUICKSTART_GUIDE.md  AUTOMATION_SYSTEM_BLUEPRINT.md  AUTOPILOT_COMPLETE.md  AUTOPILOT_LLM_INTEGRATION_GUIDE.md  BUG_REPORT.md  CACHE_BUSTING_SUCCESS.md  CASE_STUDIES_GUIDE.md  CODEOWNERS  CODE_REVIEW_NOTES.md  COMPLETE_APPS_SUMMARY.md  COMPLETE_INTEGRATION_GUIDE.md  (+409 more)
.cursor/: mcp.json
.devcontainer/: Dockerfile.dev  devcontainer.json
.firebase/: hosting..cache  hosting.ZGlzdA.cache
.github/: pull_request_template.md
.github/workflows/: cursor-cli-integration.yml  deploy-github-pages.yml  deploy.yml  test-mcp.yml  tests.yml
.gitpod/: automations.yaml
404/: index.html
agents/: __init__.py
ai-tools/: index.html  index.txt
analytics/: analysis-1758454582269.json  analysis-1758458182575.json  analysis-1758461782682.json  analysis-1758472583124.json  analysis-1758476183423.json
analytics-dashboard/: index.html  index.txt
analytics/dashboard/: dashboard-data.json
analytics/reports/: report-1758451882229.json  report-1758452782241.json  report-1758453682255.json  report-1758454582273.json  report-1758455482284.json  report-1758456382300.json  report-1758457282518.json  report-1758458182577.json  (+7 more)
auraos-automation/: README.md  env.example  package-lock.json  package.json  tsconfig.json
auraos-dev-1/: vite.config.js
auraos-mcp/: .pr_body.md  COMMIT_AGENT_PROMPT.md  INTEGRATION.md  README.md  server.py
autopilot-service/: Dockerfile  package.json  tsconfig.json
backend/: README.md  package-lock.json  package.json  server.js  test_memory.py  tsconfig.json
case-studies/: index.html  index.txt
client/: Dockerfile  index.html  nginx.conf  tsconfig.json
config/: learning_daemon_config.json
core/: __init__.py  config.py  security.py
dashboard/: index.html  index.txt
data/: autopilot-data.json  user-sessions.json
deployment/: __init__.py
docker/: Dockerfile  docker-compose.yml
docs/: PROJECT_STATUS_2025-09-22.md  README.md  openapi.yaml
env_backups/: .env.backup.20250922_142943  .env.backup.20250922_144045
frontend/: env.example  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
gateway/: Dockerfile  env.example  jest.config.js  package.json  tsconfig.json
icons/: README.md  favicon-16x16.html  favicon-32x32.html  generate-icons.js  generate-premium-icons.js  icon-128x128.html  icon-128x128.txt  icon-144x144.html  icon-144x144.txt  icon-152x152.html  icon-152x152.txt  icon-16x16.txt  icon-192x192.html  icon-192x192.txt  icon-32x32.html  icon-32x32.txt  icon-384x384.txt  icon-512x512.txt  icon-72x72.html  icon-72x72.txt  icon-96x96.txt  logo-showcase.html  test-icons.html
kubernetes/: auraos-deployment.yaml
linkedin-generator/: index.html  index.txt
linkedin-generator-standalone/: README.md  index.html  script.js
logrotate/: auraos-learning-daemon.conf
mcp/: Dockerfile  requirements.txt
monitoring/: __init__.py  alerting.py  logger.py  metrics.py  prometheus.yml  promtail.yml
nginx/: nginx.conf
public/: index.html
quantum-id-generator/: index.html  index.txt
reports/: ai-integration-test-2025-09-23.json  autopilot-2025-09-23-14.json  bot-usage-2025-09-23-14.json  comprehensive-2025-09-23-14.json  daily-report-2025-09-23.json  final-performance-test-2025-09-23.json  system-health-2025-09-23-14.json
scripts/: __init__.py  apply-ux-improvements.sh  backup.sh  deploy-ai-tools.sh  deploy-linkedin-generator.sh  deploy-security.js  deploy.sh  dev.sh  env-agent.ts  env-share-agent.ts  env-share.ts  fix_accessibility_issues.sh  fix_security_vulnerabilities.sh  fix_typescript_errors.sh  health-check.sh  master_debug.sh  setup-server.sh  syncTools.js  test-github-deployment.sh  validate_all_fixes.sh
server/: Dockerfile  Dockerfile.production  README.md  a2a-api-gateway.ts  a2a-autopilot-integration.ts  a2a-message-broker.ts  adaptive-ai-system.ts  advanced-ai-agents.js  advanced-ai-agents.ts  advanced-ai-integration.ts  advanced-ai-system.ts  advanced-ai-tools.js  advanced-ai-tools.ts  advanced-automation-engine.ts  advanced-automation.js  advanced-automation.ts  advanced-nlp-system.ts  ai-decision-engine.ts  ai-integration-service.ts  ai-model-management.js  ai-model-management.ts  ai-nlp-service.ts  ai-prompt-manager.js  ai-prompt-manager.ts  asset-optimizer.ts  autopilot-agent-backup.ts  autopilot-agent-clean.ts  autopilot-agent.js  autopilot-agent.ts  cache-manager.ts  continuous-learning-system.ts  cursor-telegram-deployment.ts  cursor-telegram-integration.ts  cursor-telegram-routes.ts  data-analysis-tools.js  data-analysis-tools.ts  database-optimizer.ts  database-service.ts  debug-stream.js  debug-stream.ts  (+98 more)
shared/: env-share.config.json  personas.d.ts  personas.d.ts.map  personas.js  schema.d.ts  schema.d.ts.map  schema.js  schema.js.map  schema.ts
src/: App.jsx  App.tsx  apps-config-minimal.ts  apps-config.ts  main.tsx
telegram-bot/: Dockerfile  package-lock.json  package.json  test-telegram.js
test/: setup.ts
test-reports/: test-report-2025-09-25T10-42-43-824Z.html  test-results-2025-09-25T10-42-43-824Z.json
tests/: __init__.py  chat.test.js  conftest.py  test_ai_agent.py
tools/: __init__.py  enhanced_auto_daemon.py
travel-agent/: .eslintrc.cjs  .firebaserc  Dockerfile  README.md  demo.md  deploy.sh  docker-compose.yml  firebase-deploy.sh  firebase-setup.md  firebase.json  index.html  netlify.toml  package.json  vercel.json
ui/: __init__.py
(+789 files in other folders)
